// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alpha renders correctly 1`] = `
<div
  style={
    {
      "borderRadius": undefined,
      "inset": "0px",
      "position": "absolute",
    }
  }
>
  <div
    style={
      {
        "borderRadius": undefined,
        "inset": "0px",
        "overflow": "hidden",
        "position": "absolute",
      }
    }
  >
    <div
      style={
        {
          "background": "url(null) center left",
          "borderRadius": undefined,
          "boxShadow": undefined,
          "inset": "0px",
          "position": "absolute",
        }
      }
    />
  </div>
  <div
    style={
      {
        "background": "linear-gradient(to right, rgba(255,0,0, 0) 0%,
           rgba(255,0,0, 1) 100%)",
        "borderRadius": undefined,
        "boxShadow": undefined,
        "inset": "0px",
        "position": "absolute",
      }
    }
  />
  <div
    onMouseDown={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      {
        "height": "100%",
        "margin": "0 3px",
        "position": "relative",
      }
    }
  >
    <div
      style={
        {
          "left": "100%",
          "position": "absolute",
          "top": undefined,
        }
      }
    >
      <div
        style={
          {
            "background": "#fff",
            "borderRadius": "1px",
            "boxShadow": "0 0 2px rgba(0, 0, 0, .6)",
            "height": "8px",
            "marginTop": "1px",
            "transform": "translateX(-2px)",
            "width": "4px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Checkboard renders children correctly 1`] = `
<button
  style={
    {
      "background": "url(null) center left",
      "borderRadius": undefined,
      "boxShadow": undefined,
      "inset": "0px",
      "position": "absolute",
    }
  }
>
  Click
</button>
`;

exports[`Checkboard renders correctly 1`] = `
<div
  style={
    {
      "background": "url(null) center left",
      "borderRadius": undefined,
      "boxShadow": undefined,
      "inset": "0px",
      "position": "absolute",
    }
  }
/>
`;

exports[`EditableInput renders correctly 1`] = `
<div
  style={
    {
      "position": "relative",
    }
  }
>
  <input
    id="rc-editable-input-1"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="#fff"
    spellCheck="false"
    style={{}}
    value="UNDEFINED"
  />
  <label
    htmlFor="rc-editable-input-1"
    onMouseDown={[Function]}
    style={
      {
        "cursor": undefined,
      }
    }
  >
    Hex
  </label>
</div>
`;

exports[`Hue renders correctly 1`] = `
<div
  style={
    {
      "borderRadius": undefined,
      "boxShadow": undefined,
      "inset": "0px",
      "position": "absolute",
    }
  }
>
  <div
    className="hue-horizontal"
    onMouseDown={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      {
        "borderRadius": undefined,
        "height": "100%",
        "padding": "0 2px",
        "position": "relative",
      }
    }
  >
    <style>
      
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
    </style>
    <div
      style={
        {
          "left": "0%",
          "position": "absolute",
          "top": undefined,
        }
      }
    >
      <div
        style={
          {
            "background": "#fff",
            "borderRadius": "1px",
            "boxShadow": "0 0 2px rgba(0, 0, 0, .6)",
            "height": "8px",
            "marginTop": "1px",
            "transform": "translateX(-2px)",
            "width": "4px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Saturation renders correctly 1`] = `
<div
  onMouseDown={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    {
      "background": "hsl(0,100%, 50%)",
      "borderRadius": undefined,
      "inset": "0px",
      "position": "absolute",
    }
  }
>
  <style>
    
          .saturation-white {
            background: -webkit-linear-gradient(to right, #fff, rgba(255,255,255,0));
            background: linear-gradient(to right, #fff, rgba(255,255,255,0));
          }
          .saturation-black {
            background: -webkit-linear-gradient(to top, #000, rgba(0,0,0,0));
            background: linear-gradient(to top, #000, rgba(0,0,0,0));
          }
        
  </style>
  <div
    className="saturation-white"
    style={
      {
        "borderRadius": undefined,
        "inset": "0px",
        "position": "absolute",
      }
    }
  >
    <div
      className="saturation-black"
      style={
        {
          "borderRadius": undefined,
          "boxShadow": undefined,
          "inset": "0px",
          "position": "absolute",
        }
      }
    />
    <div
      style={
        {
          "cursor": "default",
          "left": "100%",
          "position": "absolute",
          "top": "0%",
        }
      }
    >
      <div
        style={
          {
            "borderRadius": "50%",
            "boxShadow": "0 0 0 1.5px #fff, inset 0 0 1px 1px rgba(0,0,0,.3),
            0 0 1px 2px rgba(0,0,0,.4)",
            "cursor": "hand",
            "height": "4px",
            "transform": "translate(-2px, -2px)",
            "width": "4px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Swatch renders correctly 1`] = `
<span
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "background": "#333",
        "cursor": "pointer",
        "height": "100%",
        "opacity": "0.4",
        "outline": "none",
        "position": "relative",
        "width": "100%",
      }
    }
    tabIndex={0}
    title="#333"
  />
</span>
`;

exports[`Swatch renders custom title correctly 1`] = `
<span
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "background": "#fff",
        "cursor": "pointer",
        "height": "100%",
        "outline": "none",
        "position": "relative",
        "width": "100%",
      }
    }
    tabIndex={0}
    title="white"
  />
</span>
`;

exports[`Swatch renders with an onMouseOver handler correctly 1`] = `
<span
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOver={[Function]}
    style={
      {
        "background": "#fff",
        "cursor": "pointer",
        "height": "100%",
        "outline": "none",
        "position": "relative",
        "width": "100%",
      }
    }
    tabIndex={0}
    title="white"
  />
</span>
`;
